[package]
name = "krate"
description = "Get information and metadata for published Rust crates."
version = "0.4.1"
authors = ["Sean Larkin <TheLarkInn@users.noreply.github.com>"]
repository = "https://github.com/TheLarkInn/krate"
license = "MIT"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"

[dev-dependencies]
tokio = { version = "1.24.2", features = ["full"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
